--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "fix-data": "ts-node -r tsconfig-paths/register scripts/fix-invalid-data.ts"
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
     "@prisma/client": "^6.16.3",
     "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
