chore: add environment config and deployment setup

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,37 @@
+# ==========================================
+# AUTENTICAÇÃO JWT
+# ==========================================
+JWT_AUTH_SECRET=a-strong-secret-key
+JWT_REFRESH_SECRET=another-strong-secret-key
 
+# ==========================================
+# INTEGRAÇÃO COM APIS EXTERNAS
+# ==========================================
 
-# Google Cloud Vision API
+# Google Cloud Vision API (para extração de dados de imagens)
 GOOGLE_APPLICATION_CREDENTIALS=
 
-# OpenAI API
+# OpenAI API (para relatórios com IA)
 OPENAI_API_KEY=
 
-# Port
-PORT=
+# ==========================================
+# CONFIGURAÇÃO DO SERVIDOR
+# ==========================================
 
-DATABASE_URL=
+# Porta do servidor (Railway define automaticamente em produção)
+PORT=3001
+
+# URL do frontend (para CORS)
+# Desenvolvimento: http://localhost:3000
+# Produção: https://seu-app.vercel.app
+FRONTEND_URL=http://localhost:3000
+
+# ==========================================
+# BANCO DE DADOS
+# ==========================================
+
+# PostgreSQL Connection String
+# Desenvolvimento: postgresql://user:password@localhost:5432/poupaai
+# Produção: Railway fornece automaticamente
+DATABASE_URL=postgresql://user:password@localhost:5432/poupaai
+
