Fix: Adjust Railway configuration for correct build and start with Prisma.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,11 +2,15 @@
 nixPkgs = ["nodejs_20", "openssl"]
 
 [phases.install]
-# Instala todas as dependências (incluindo devDependencies) necessárias para o build
-cmds = ["npm ci --include=dev"]
+cmds = [
+  "PRISMA_GENERATE_SKIP_AUTOINSTALL=1 npm ci --include=dev",
+  # Gera Prisma Client ANTES do build
+  "npx prisma generate"
+]
 
 [phases.build]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npx prisma generate && npx prisma migrate deploy && npm run start:prod"
+# Agora só aplica migrate e inicia o dist
+cmd = "npx prisma migrate deploy && node dist/main.js"
