fix: enable Google Vision API credentials via environment variable

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,10 @@ JWT_REFRESH_SECRET=another-strong-secret-key
 # ==========================================
 
 # Google Cloud Vision API (para extração de dados de imagens)
-GOOGLE_APPLICATION_CREDENTIALS=
+# Desenvolvimento: use GOOGLE_APPLICATION_CREDENTIALS com caminho do arquivo
+# Produção (Railway): use GOOGLE_CREDENTIALS_JSON com o JSON completo
+GOOGLE_APPLICATION_CREDENTIALS=/caminho/para/credentials.json
+GOOGLE_CREDENTIALS_JSON=
 
 # OpenAI API (para relatórios com IA)
 OPENAI_API_KEY=
